[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/fonts/PTSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SensorWidthInput.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/PTSans-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 3 )
LineEdit/styles/normal = null
LineEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://resources/fonts/PTSans-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = SubResource( 7 )

[node name="Main" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="SensorWidthLabel" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 47.5905
margin_top = 58.1591
margin_right = 154.59
margin_bottom = 84.1591
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Sensor Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MMLabel1" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 288.0
margin_top = 65.0
margin_right = 318.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "mm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MMLabel2" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 601.0
margin_top = 122.0
margin_right = 631.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "mm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PXLabel" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 288.0
margin_top = 121.0
margin_right = 318.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "px"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FSlashLabel" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 477.0
margin_top = 57.0
margin_right = 507.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "f/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PixelsWidthLabel" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 50.0
margin_top = 117.0
margin_right = 147.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Pixels Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FocalLengthLabel" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 367.0
margin_top = 115.0
margin_right = 472.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Focal Length"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FStopLabel" type="Label" parent="."]
anchor_top = -0.00555556
anchor_bottom = -0.00555556
margin_left = 366.936
margin_top = 58.1938
margin_right = 471.936
margin_bottom = 84.1938
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "F-Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensorWidthInput" type="LineEdit" parent="."]
margin_left = 183.318
margin_top = 50.3365
margin_right = 281.318
margin_bottom = 87.3365
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0.258824, 0.615686, 0.607843, 1 )
custom_colors/cursor_color = Color( 0.101961, 0.0980392, 0.0980392, 1 )
custom_colors/font_color = Color( 0.278431, 0.278431, 0.278431, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FocalLengthInput" type="LineEdit" parent="."]
margin_left = 496.0
margin_top = 110.0
margin_right = 594.0
margin_bottom = 147.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0.258824, 0.615686, 0.607843, 1 )
custom_colors/cursor_color = Color( 0.101961, 0.0980392, 0.0980392, 1 )
custom_colors/font_color = Color( 0.278431, 0.278431, 0.278431, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FStopInput" type="LineEdit" parent="."]
margin_left = 496.184
margin_top = 49.8062
margin_right = 594.184
margin_bottom = 86.8062
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0.258824, 0.615686, 0.607843, 1 )
custom_colors/cursor_color = Color( 0.101961, 0.0980392, 0.0980392, 1 )
custom_colors/font_color = Color( 0.278431, 0.278431, 0.278431, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PixelWidthInput" type="LineEdit" parent="."]
margin_left = 182.747
margin_top = 109.516
margin_right = 280.747
margin_bottom = 146.516
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0.258824, 0.615686, 0.607843, 1 )
custom_colors/cursor_color = Color( 0.101961, 0.0980392, 0.0980392, 1 )
custom_colors/font_color = Color( 0.278431, 0.278431, 0.278431, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculateButton" type="Button" parent="."]
margin_left = 50.7755
margin_top = 300.159
margin_right = 142.776
margin_bottom = 333.159
custom_fonts/font = SubResource( 6 )
text = "Calculate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultMessage" type="Label" parent="."]
margin_left = 54.0
margin_top = 240.0
margin_right = 414.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.294118, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CalculateButton" to="." method="_on_CalculateButton_pressed"]
